# programming_practices

./: .gitignore  README.md  gitpush.sh
LeetCode_cn/: CMakeLists.txt  README.md
LeetCode_cn/cpp/初级算法/: README.md
example_project/src/: example2.cpp
practice_cpp/LeetCode_cn/cpp/初级算法/数组/: rotate_array.cpp
practice_cpp/design_pattern/: CMakeLists.txt  README.md
practice_cpp/design_pattern/src/primary/: adapter.cpp  bridge.cpp  facade.cpp  factory.cpp  factory_map.cpp  observer.cpp  template_method.cpp
practice_cpp/example_project/: CMakeLists.txt
practice_cpp/example_project/include/: lib1.hpp  lib2.hpp
practice_cpp/example_project/src/: example1.cpp  lib1.cpp  lib2.cpp
practice_cpp/func/: CMakeLists.txt  README.md
practice_cpp/func/data/: file_ReadWrite_data.txt
practice_cpp/func/data/file_ReadWrite/: output.txt
practice_cpp/func/src/: Eigen_nan2inf_main.cpp  Eigen_test_main.cpp  PID_test_main.cpp  STL_test_main.cpp  color_test_main.cpp  costime_test_main.cpp  cppad_test_main.cpp  derived_class_test_main.cpp  file_ReadWrite_main.cpp  hello_world_test_main.cpp  make_shared_main.cpp  matplotlib_test_main.cpp  namespace_main.cpp  nan2inf_test_main.cpp  temp_test.cpp  template_test_main.cpp
practice_cpp/func/src/hello_world/: hello_world.cpp  hello_world.h
practice_cpp/func/src/template/: template_test.cpp  template_test.h
practice_cpp/optimization/: CMakeLists.txt
practice_cpp/optimization/include/: opt_ipopt_cppad_quickstart.h
practice_cpp/optimization/src/: opt_ipopt_cppad_quickstart.cpp
practice_html_css/: basic.html  style_usage.html
practice_html_css/style/: temp_style.css
practice_markdown/: README.md  basic-tutorials.md  equations.md  lists.md  table.md  test.html  todo_item.md
practice_matlab/: README.md
practice_matlab/src/: cell_test.m  cholesky_test.m  func_plot.m  symbol_calcu.m  symbol_calcu2.m  symbol_substitution.m  tangent_unit_circle.m
practice_python/100-Days-Of-ML-Code/Day1/: day1.py
practice_python/basis/: class_test.py
practice_python/codecademy/: Madlibs.py  getDate.py  if_string.py
practice_python/func/: grade_search_system.py  random_func.py
practice_python/liaoxuefeng/: README.md  def_func.py  python3_basic.py  python3_practice_func_params.py  questions.md  recursive_function.py
practice_python/liaoxuefeng/advanced_features/: generator.py  iteration.py  iterator.py  list_comprehensions.py
practice_python/liaoxuefeng/dataIO/: StringIO_BytesIO.py  dir.py  fileRD.py  serialization.py
practice_python/liaoxuefeng/dataIO/fileRD/: gbk.txt  testlist.txt  writetest.txt  writetest_append.txt
practice_python/liaoxuefeng/error_handling/: debug.py  error_handling.py
practice_python/liaoxuefeng/function/: advanced_func_decorator.py  advanced_func_filter.py  advanced_func_map_reduce.py  advanced_func_partial_function.py  advanced_func_sorted.py
practice_python/liaoxuefeng/module/: a_test_module.py  advanced_func_filter.py
practice_python/liaoxuefeng/multi_processing/: multi_processing.py
practice_python/liaoxuefeng/object_oriented_programming/: attribute_of_class_and_object.py  class_and_instance.py  class_information.py  inheritance_and_polymorphism.py  visit_limited.py
practice_python/machine_learning/: gym_test.py  simple_example.py
practice_python/math_in_python/: README.md  cvxpy_test.py  scipy_optimize_test.py  sympy_test.py
practice_python/matplotlib/: README.md  advanced_plot.py  annotate_explain.py  colormap_demo.py  connectionstyle_demo.py  simple_plot.py
practice_python/tensorflow/: README.md  get_started.py  machine_learning_with_python_ch02.py  machine_learning_with_python_ch03.py  online_fit_with_keras.py
